[gd_scene load_steps=6 format=3 uid="uid://c0bngicr1p4w0"]

[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="1_2nmyf"]
[ext_resource type="Script" path="res://game_scenes/prompts_screen/starting_prompts.gd" id="1_jomlb"]
[ext_resource type="PackedScene" uid="uid://bfol1cqccf88w" path="res://control.tscn" id="2_wm3qu"]
[ext_resource type="Theme" uid="uid://867x5f46yrxo" path="res://pixel font/small_font_theme.tres" id="3_mx321"]
[ext_resource type="Texture2D" uid="uid://wyhspu3kjkna" path="res://images/UI_images/Startscreen.png" id="4_e3ols"]

[node name="Node2D3" type="Node2D"]
script = ExtResource("1_jomlb")

[node name="Node2D" parent="." instance=ExtResource("2_wm3qu")]

[node name="Label" type="Label" parent="."]
offset_left = 190.0
offset_top = 130.0
offset_right = 965.0
offset_bottom = 189.0
theme = ExtResource("1_2nmyf")
text = "Complete All Fields to Continue"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 463.0
offset_top = 289.0
offset_right = 681.0
offset_bottom = 339.0
focus_mode = 0
theme = ExtResource("3_mx321")
text = "Upload OPFOR Profile"

[node name="Button2" type="Button" parent="."]
offset_left = 464.0
offset_top = 354.0
offset_right = 666.0
offset_bottom = 403.0
focus_mode = 0
theme = ExtResource("3_mx321")
text = "Upload Defend Profile"

[node name="Button4" type="Button" parent="."]
offset_left = 463.0
offset_top = 415.0
offset_right = 681.0
offset_bottom = 464.0
focus_mode = 0
theme = ExtResource("3_mx321")
text = "Upload Timeline"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="FileDialog2" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="FileDialog3" type="FileDialog" parent="."]
mode = 2
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Button3" type="Button" parent="."]
offset_left = 420.0
offset_top = 491.0
offset_right = 713.0
offset_bottom = 566.0
focus_mode = 0
theme = ExtResource("1_2nmyf")
text = "CONTINUE"

[node name="attackfilelabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 289.0
offset_right = 904.0
offset_bottom = 339.0
theme = ExtResource("3_mx321")
vertical_alignment = 1

[node name="defendfilelabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 353.0
offset_right = 903.0
offset_bottom = 403.0
theme = ExtResource("3_mx321")
vertical_alignment = 1

[node name="timelinefilelabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 415.0
offset_right = 903.0
offset_bottom = 465.0
theme = ExtResource("3_mx321")
vertical_alignment = 1

[node name="Button5" type="Button" parent="."]
offset_left = 251.0
offset_top = 491.0
offset_right = 401.0
offset_bottom = 566.0
focus_mode = 0
theme = ExtResource("1_2nmyf")
button_mask = 3
text = "BACK"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(1.152, 0.973)
texture = ExtResource("4_e3ols")

[node name="SpinBox" type="SpinBox" parent="."]
offset_left = 788.0
offset_top = 212.0
offset_right = 888.0
offset_bottom = 252.0
max_value = 99.0
rounded = true
alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 217.0
offset_top = 225.0
offset_right = 657.0
offset_bottom = 248.0
scale = Vector2(1.3, 1.3)
theme = ExtResource("3_mx321")
text = "Enter a Time Limit for Each Team (minutes): "

[node name="HELP" type="Button" parent="."]
offset_left = 64.0
offset_top = 548.0
offset_right = 108.0
offset_bottom = 592.0
focus_mode = 0
theme = ExtResource("1_2nmyf")
text = "?"

[node name="Window" type="Window" parent="."]
initial_position = 2
visible = false

[node name="TextEdit" type="TextEdit" parent="Window"]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="HELP" to="." method="_on_help_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
